--- a/Frontend/Frontend.csproj
+++ b/Frontend/Frontend.csproj
@@ -46,14 +46,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="MainViewForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="MainViewForm.Designer.cs">
+      <DependentUpon>MainViewForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\AnimeView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\AnimeView.Designer.cs">
+      <DependentUpon>AnimeView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\MangaView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\MangaView.Designer.cs">
+      <DependentUpon>MangaView.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="MainViewForm.resx">
+      <DependentUpon>MainViewForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -75,6 +90,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Abstraction\Abstraction.csproj">
+      <Project>{f80ee323-62ac-4c00-89eb-25f729c985c0}</Project>
+      <Name>Abstraction</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DataHandelingLayer\DataHandelingLayer.csproj">
+      <Project>{f183e665-a90a-42da-bc61-ccec1e6fae9f}</Project>
+      <Name>DataHandelingLayer</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
